--- a/pipelines.yml
+++ b/pipelines.yml
@@ -1,1 +1,8 @@
-This is a test 
+resources:
+  - name: liavg
+    type: GitRepo
+    Configuration:
+      gitPtovider: liavgu
+      path: liavgu/pipelines_web_app
+      branches:
+        include: main
