--- a/pipelines.yml
+++ b/pipelines.yml
@@ -5,3 +5,20 @@ resources:
       sourceRepository: local-docker-repo
       imageName: appimage
       imageTag: latest
+
+
+pipelines:
+  - name: pipelines_appimage
+    steps:
+      - name: step_Image_1
+        type: Bash
+        configuration:
+          nodePool: win_2019
+          inputResources:
+            - name: Test
+        execution:
+          onExecute:
+            - ls
+            - pwd
+            - ifconfig
+            - echo "liav ha gever"
