--- a/pipelines.yml
+++ b/pipelines.yml
@@ -4,7 +4,7 @@ resources:
     configuration:
       registry: MyArtifactory
       sourceRepository: local-docker-repo
-      imageName: appimage
+      imageName: liav_sql
       imageTag: latest
       autoPull: true
       
