--- a/pipelines.yml
+++ b/pipelines.yml
@@ -1,29 +1,14 @@
 resources:
-  - name: NewTest
-    type: Image
+  - name: webinfra_build_info
+    type: BuildInfo
     configuration:
-      registry: MyDockerRepo
-      sourceRepository: liav-local-repo
-      imageName: liavacademy.jfrogdev.org/liav-local-repo/webinfra
-      imageTag: latest
-      autoPull: true
+      sourceArtifactory: MyArtifactory
+      buildName: webinfra_build
+      buildNumber: 1 
       
-pipelines:
-  - name: Test_2
-    steps:
-      - name: step_Image_1
-        type: Bash
-        configuration:
-          nodePool: ubuntu
-          inputResources:
-            - name: NewTest
-          integrations:
-            - name: MyDockerRepo
-        execution:
-          onExecute:
-            - ls
-            - pwd
-            - echo "aaaaaa"
-
-  - name: webinfra_build
-    type: DockerBuild
+# pipelines:
+#   - name: webinfra_build_info_test
+#     type: DockerBuild
+#     steps:
+      
+    
