--- a/pipelines.yml
+++ b/pipelines.yml
@@ -6,9 +6,13 @@ resources:
       buildName: webinfra_build
       buildNumber: 1 
       
-# pipelines:
-#   - name: webinfra_build_info_test
-#     type: DockerBuild
-#     steps:
-      
-    
+pipelines:
+  - name: webinfra_build_info_test
+    type: DockerBuild
+    steps:
+      dockerFileLocation: .
+      dockerFileName: Dockerfile
+      dockerImageName: docker.artprod.mycompany.com/docker_local/dbp  # replace with your image path and name
+      dockerImageTag: ${run_number}
+      integrations:
+        - name: MyArtifactory 
