--- a/pipelines.yml
+++ b/pipelines.yml
@@ -12,7 +12,7 @@ pipelines:
     steps:
       dockerFileLocation: .
       dockerFileName: Dockerfile
-      dockerImageName: docker.artprod.mycompany.com/docker_local/dbp  # replace with your image path and name
+      dockerImageName: liavacademy.jfrogdev.org/liav-local-repo/webinfra  # replace with your image path and name
       dockerImageTag: ${run_number}
       integrations:
         - name: MyArtifactory 
